--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p 
+    a(href="./error") Click Here 
+    span to See error page
