--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='icon', href='/favicons/favicon.ico')
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Raleway:300,400")
   body
     block content
